oriterm_core/tests/teseq/harness/snapshots/teseq__harness__assertions__workflows_mode_decsc_attrs_120x40_grid.snap
---
source: oriterm_core/tests/teseq/harness/assertions.rs
expression: outcome.grid_text
---
plain text                                                                                                              
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                             ─ ▒°├␊⎼ ⎼␊⎽├⎺⎼␊
