oriterm_core/tests/teseq/harness/snapshots/teseq__harness__assertions__workflows_mode_scroll_origin_fill_97x33_grid.snap
---
source: oriterm_core/tests/teseq/harness/assertions.rs
expression: outcome.grid_text
---
After origin off                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
Row 04                                                                                           
Row 05                                                                                           
Row 06                                                                                           
Row 07                                                                                           
Row 08                                                                                           
Row 09                                                                                           
Row 10                                                                                           
Row 11                                                                                           
Row 12                                                                                           
Row 13                                                                                           
Row 14                                                                                           
Row 15                                                                                           
Row 16                                                                                           
Row 17                                                                                           
Row 18                                                                                           
Row 19                                                                                           
Row 20                                                                                           
Row 21                                                                                           
Row 22                                                                                           
Row 23                                                                                           
Row 24                                                                                           
Row 25                                                                                           
Row 26
