oriterm_core/tests/teseq/harness/snapshots/teseq__harness__assertions__workflows_mode_scroll_origin_fill_grid.snap
---
source: oriterm_core/tests/teseq/harness/assertions.rs
expression: outcome.grid_text
---
After origin off                                                                
                                                                                
                                                                                
                                                                                
Row 04                                                                          
Row 05                                                                          
Row 06                                                                          
Row 07                                                                          
Row 08                                                                          
Row 09                                                                          
Row 10                                                                          
Row 11                                                                          
Row 12                                                                          
Row 13                                                                          
Row 14                                                                          
Row 15                                                                          
Row 16                                                                          
Row 17                                                                          
Row 18
