oriterm_core/tests/teseq/harness/snapshots/teseq__harness__assertions__workflows_query_cursor_tracking_events.snap
---
source: oriterm_core/tests/teseq/harness/assertions.rs
expression: event_text
---
PtyWrite("\u{1b}[5;10R")
PtyWrite("\u{1b}[2;10R")
PtyWrite("\u{1b}[2;30R")
