oriterm_core/tests/teseq/harness/snapshots/teseq__harness__assertions__workflows_real_charset_switching_grid.snap
---
source: oriterm_core/tests/teseq/harness/assertions.rs
expression: outcome.grid_text
---
┌────┐                                                                          
│Text │                                                                         
└────┘
